test/compile_fail/fixtures/immutable_property.stderr
error: proc-macro derive panicked
 --> fixtures/immutable_property.rs:5:10
  |
5 | #[derive(Replicate)]
  |          ^^^^^^^^^
  |
  = help: message: immutable Replicate cannot hold Property<T> or EntityProperty — use plain T fields instead (compile error from #[replicate(immutable)] validation)
